<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EditCarFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginEnd="50dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/brandNameTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/brand_name_text_view" />

            <EditText
                android:id="@+id/editTextBrandName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName" />

            <TextView
                android:id="@+id/modelNameTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/model_name_text_view" />

            <EditText
                android:id="@+id/editTextModelName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/production_year_text_view" />

            <EditText
                android:id="@+id/editTextProductionYear"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="numberDecimal" />

            <Button
                android:id="@+id/configsButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/add_config_name_button" />

            <Button
                android:id="@+id/createCarButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Edit" />
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>