<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CarFuncActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginEnd="50dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/textView1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/special_car_class_spinner" />

            <Spinner
                android:id="@+id/spinnerCarClass"
                android:layout_width="match_parent"
                android:layout_height="40dp" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/special_drive_type" />

            <Spinner
                android:id="@+id/spinnerDriveType"
                android:layout_width="match_parent"
                android:layout_height="40dp" />

            <TextView
                android:id="@+id/modelNameTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/special_description_multipart" />

            <EditText
                android:id="@+id/editTextMultiLineDesc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:gravity="start|top"
                android:inputType="textMultiLine"
                android:lines="10" />

            <Button
                android:id="@+id/createCarButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Edit" />
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>